:boom: fix(ags/notifications): replace '&' with '&amp;' on notification widget(pango markup thing), fix spacing

--- a/ags/style/_float-notifications.scss
+++ b/ags/style/_float-notifications.scss
@@ -7,7 +7,7 @@
     top: 6px;
   };
 
-  & > .notification {
+  & .notification {
     margin: 6px;
     box-shadow: 0 0 4px .5px colors.$bg-primary;
   }
